tests/invalid/arith_wrong_module.err_exp
arith_wrong_module.m:022: In clause for predicate `test_func'/3:
arith_wrong_module.m:022:   type error in unification of variable `C'
arith_wrong_module.m:022:   and functor `+'/2.
arith_wrong_module.m:022:   [38;5;87mvariable `C'[39;49m has type
arith_wrong_module.m:022:     [38;5;203muint32,[39;49m
arith_wrong_module.m:022:   [38;5;87mfunctor `+'/2[39;49m has type
arith_wrong_module.m:022:     [38;5;40m`+'(int, int): int.[39;49m
arith_wrong_module.m:022:   Note that operations on values of type `uint32' are
arith_wrong_module.m:022:   available only if module [38;5;226m`uint32' is imported.[39;49m
arith_wrong_module.m:025: In clause for predicate `test_pred'/3:
arith_wrong_module.m:025:   in call to predicate `int.pow'/3:
arith_wrong_module.m:025:   in argument 1:
arith_wrong_module.m:025:     [38;5;87mvariable `A'[39;49m has type
arith_wrong_module.m:025:       [38;5;203mint16,[39;49m
arith_wrong_module.m:025:     expected type was
arith_wrong_module.m:025:       [38;5;40mint;[39;49m
arith_wrong_module.m:025:   in argument 2:
arith_wrong_module.m:025:     [38;5;87mvariable `B'[39;49m has type
arith_wrong_module.m:025:       [38;5;203muint16,[39;49m
arith_wrong_module.m:025:     expected type was
arith_wrong_module.m:025:       [38;5;40mint;[39;49m
arith_wrong_module.m:025:   in argument 3:
arith_wrong_module.m:025:     [38;5;87mvariable `C'[39;49m has type
arith_wrong_module.m:025:       [38;5;203mint16,[39;49m
arith_wrong_module.m:025:     expected type was
arith_wrong_module.m:025:       [38;5;40mint.[39;49m
arith_wrong_module.m:025:   Note that operations on values of types `int16'
arith_wrong_module.m:025:   `uint16' are available only if modules [38;5;226m`int16'[39;49m and
arith_wrong_module.m:025:   [38;5;226m`uint16'[39;49m [38;5;226mare imported.[39;49m
arith_wrong_module.m:028: In clause for predicate `game_loop'/4:
arith_wrong_module.m:028:   in unification of [38;5;87mvariable `Diff'[39;49m
arith_wrong_module.m:028:   and term [38;5;87m`(End - Start)':[39;49m
arith_wrong_module.m:028:   type error in arguments of functor `-'/2.
arith_wrong_module.m:028:   [38;5;87mArgument 1 (End)[39;49m has type
arith_wrong_module.m:028:     [38;5;203mint64,[39;49m
arith_wrong_module.m:028:   expected type was
arith_wrong_module.m:028:     [38;5;40mint.[39;49m
arith_wrong_module.m:028:   [38;5;87mArgument 2 (Start)[39;49m has type
arith_wrong_module.m:028:     [38;5;203mint64,[39;49m
arith_wrong_module.m:028:   expected type was
arith_wrong_module.m:028:     [38;5;40mint.[39;49m
arith_wrong_module.m:028:   Note that operations on values of type `int64' are
arith_wrong_module.m:028:   available only if module [38;5;226m`int64' is imported.[39;49m
For more information, recompile with `-E'.
